--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=task-management-system
+#DATASOURCE
+spring.datasource.url= jdbc:mysql://localhost:3306/bd_rest?createDatabaseIfNotExist=true
+spring.datasource.username= root
+spring.datasource.password= root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#JPA
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql= true
+spring.jpa.open-in-view= true
